# web-parser-nested-json-strings

./: .gitignore  main.py  pyproject.toml
app/: endpoints.py  serivce.py
tests/: conftest.py  package.json  test_enpdoints.py  test_service.py
